--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "dev": "node build/script.dev.js",
     "build": "node build/script.build.js",
     "lint": "eslint --ext .js,.vue src",
-    "andro": "quasar build && cd cordova && cordova run"
   },
   "dependencies": {
     "ansi-html": "0.0.7",
     "axios": "^0.16.2",
     "babel-preset-env": "^1.6.0",
     "babel-runtime": "^6.25.0",
+    "bootstrap": "4.0.0-beta",
     "bootstrap-vue": "^1.0.0-beta.7",
     "chart.js": "^2.7.0",
     "color-convert": "^1.9.1",
     "core-js": "^2.5.5",
-    "helloworld": "file:cordova",
     "html-entities": "^1.2.1",
     "pretty-error": "^2.1.1",
     "quasar-cli": "^0.15.14",
