--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "node build/script.clean.js",
     "dev": "node build/script.dev.js",
     "build": "node build/script.build.js",
-    "lint": "eslint --ext .js,.vue src",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
     "ansi-html": "0.0.7",
